Implement code changes to enhance functionality and improve performance

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!-- Card 1: 1968 -->
     <div class="timeline-card">
       <div class="card-image-container">
-        <img src="img/1.jpg" alt="Placeholder Image" />
+        <img src="img/1.jpg" alt="Creation of Intel Image" />
         <div class="card-description">
           <h2>1968</h2>
           <h3>Intel Founded</h3>
@@ -64,7 +64,7 @@
     <!-- Card 2: 1971 -->
     <div class="timeline-card">
       <div class="card-image-container">
-        <img src="img/2.jpg" alt="Placeholder Image" />
+        <img src="img/2.jpg" alt="4004 Microprocessor Image" />
         <div class="card-description">
           <h2>1971</h2>
           <h3>First Microprocessor</h3>
@@ -80,7 +80,7 @@
     <!-- Card 3: 1978 -->
     <div class="timeline-card">
       <div class="card-image-container">
-        <img src="img/3.jpg" alt="Placeholder Image" />
+        <img src="img/3.jpg" alt="8086 Processor Image" />
         <div class="card-description">
           <h2>1978</h2>
           <h3>8086 Processor</h3>
@@ -95,7 +95,7 @@
     <!-- Card 4: 1985 -->
     <div class="timeline-card">
       <div class="card-image-container">
-        <img src="img/4.jpg" alt="Placeholder Image" />
+        <img src="img/4.jpg" alt="386 Processor Image" />
         <div class="card-description">
           <h2>1985</h2>
           <h3>386 Processor</h3>
@@ -111,7 +111,7 @@
     <!-- Card 5: 2006 -->
     <div class="timeline-card">
       <div class="card-image-container">
-        <img src="https://placehold.co/250x100" alt="Placeholder Image" />
+        <img src="img/emissions.jpg" alt="Emissions Image" />
         <div class="card-description">
           <h2>2006</h2>
           <h3>Peak GHG Emissions</h3>
@@ -128,7 +128,7 @@
     <!-- Card 6: 2020 -->
     <div class="timeline-card">
       <div class="card-image-container">
-        <img src="https://placehold.co/250x100" alt="Placeholder Image" />
+        <img src="img/RISE.jpg" alt="Sustainability Image" />
         <div class="card-description">
           <h2>2020</h2>
           <h3>RISE Strategy</h3>
@@ -144,7 +144,7 @@
     <!-- Card 7: 2022 -->
     <div class="timeline-card">
       <div class="card-image-container">
-        <img src="https://placehold.co/250x100" alt="Placeholder Image" />
+        <img src="img/netzero.jpg" alt="Net-Zero Image" />
         <div class="card-description">
           <h2>2022</h2>
           <h3>Net-Zero By 2040</h3>
@@ -160,7 +160,7 @@
     <!-- Card 8: 2023 -->
     <div class="timeline-card">
       <div class="card-image-container">
-        <img src="https://placehold.co/250x100" alt="Placeholder Image" />
+        <img src="img/renewable.jpg" alt="Renewable Energy Image" />
         <div class="card-description">
           <h2>2023</h2>
           <h3>Renewable Electricity</h3>
@@ -176,7 +176,7 @@
     <!-- Card 9: 2024 -->
     <div class="timeline-card">
       <div class="card-image-container">
-        <img src="https://placehold.co/250x100" alt="Placeholder Image" />
+        <img src="img/summit.jpg" alt="Summit Conference Image" />
         <div class="card-description">
           <h2>2024</h2>
           <h3>Sustainability Summit</h3>
